clusters/helheim/workloads/whoami/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "whoami.houseofix.online"
spec:
  parentRefs:
    - name: envoy
      namespace: envoy-gateway
      kind: Gateway
  hostnames:
    - "whoami.houseofix.online"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: whoami
          port: 80
